# gold-mining-framework

./: README.md  flake.nix
.opencode/agents/: analysis-agent.md  competitive-intelligence.md  competitor-scout.md  copywriter.md  critique-agent.md  data-collector.md  gold-miner.md  ideation-agent.md  landing-page-designer.md  landing-page-developer.md  reddit-researcher.md
landing-page-template/: tailwind.config.mjs
landing-page-template/src/components/: FAQ.astro  HowItWorks.astro  Testimonials.astro  WaitlistForm.astro
landing-page-template/src/layouts/: Layout.astro
shared-backend/: package-lock.json  package.json  server.js
tools/: pyproject.toml  reddit_scraper.py
